--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "/jekyll" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
-gems: 
-	- ImageTag
+gems: [ImageTag]
 
 # Collections
 collections:
