--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,53 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "/jekyll" # the base hostname & protocol for your site
+baseurl: "/jekyll/" # the subpath of your site, e.g. /blog/
+url: "http://allenwrenches.github.io/jekyll/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 gems: [ImageTag]
-
-# Prose
-prose:
-  media: '/jekyll/media'
 
 # Collections
 collections: [music]
 
 # Build settings
 markdown: kramdown
+
+permalink: pretty
+prose:
+  rooturl: '_posts'
+  media: 'media'
+  metadata:
+    _posts:
+      - name: "category"
+        field:
+          element: "hidden"
+          value: "blog"
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "blog"
+      - name: "title"
+        field:
+          element: "text"
+          label: "Title"
+          value: ""
+      - name: "splash"
+        field:
+          element: "text"
+          label: "Splash image"
+          value: ""
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Choose Tags"
+          options:
+            - name: "Apples"
+              value: "apples"
+            - name: "Bananas"
+              value: "bananas"
+            - name: "Pears"
+              value: "pears"
+            - name: "Mangos"
+              value: "mangos"
