--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ markdown: kramdown
 
 permalink: pretty
 prose:
-  media: '/jekyll/media'
+  media: 'jekyll/media'
   metadata:
     _posts:
       - name: "category"
