--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,7 @@ prose:
           value: "blog"
       - name: "layout"
         field:
-          element: "hidden"
-          value: "post"
+          element: "select"
       - name: "title"
         field:
           element: "text"
@@ -49,6 +48,17 @@ prose:
           element: "text"
           label: "Splash image"
           value: ""
+      - name: "chapter"
+      	  element: "select"
+          label: "Chapter:"
+          placeholder: "Choose Chapter"
+          options:
+          	- name: "Chapter 1"
+              value: "chapter1"
+          	- name: "Chapter 2"
+              value: "chapter2"
+          	- name: "Chapter 3"
+              value: "chapter3"
       - name: "tags"
         field:
           element: "multiselect"
