--- a/_config.yml
+++ b/_config.yml
@@ -12,16 +12,7 @@ github_username:  jekyll
 gems: [ImageTag]
 
 # Collections
-collections: 
-	- Chapter1:
-        output: true
-        permalink: /awesome/:path/
-    - Chapter2:
-        output: true
-        permalink: /awesome/:path/
-    - Chapter3:
-        output: true
-        permalink: /awesome/:path/
+collections: [Chapter1, Chapter2, Chapter3]
 
 # Build settings
 markdown: kramdown
