--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ prose:
           label: "Splash image"
           value: ""
       - name: "chapter"
+      	field:
       	  element: "select"
           label: "Chapter:"
           placeholder: "Choose Chapter"
