--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,13 @@ prose:
       - name: "layout"
         field:
           element: "select"
+          label: "Layout:"
+          placeholder: "Choose Layout"
+          options:
+          	- name: "Content"
+              value: "content"
+          	- name: "Accordion"
+              value: "accordion"
       - name: "title"
         field:
           element: "text"
