--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,11 @@ collections:
   Chapter3:
     output: true
     permalink: :path/
+    
+render:
+  - Chapter1
+  - Chapter2
+  - Chapter3
 
 # Build settings
 markdown: kramdown
